--- a/silver-happiness.html
+++ b/silver-happiness.html
@@ -3,8 +3,26 @@
 </head>
 <body>
 
+<h1 style = "color:darkslateblue;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+text-align: center;">
+Hello, World!
+</h1>
 
-<h1>
+<p style = "color:lightcoral;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+text-align: center;">
+    Feel free to push on random buttons to see where it leads you ;)
+</p>
 
-    
+<p style = "color:red;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+text-align: center;"><strong>
+    WARNING: THIS MAY OR MAY NOT LEAD TO SEVERE PROCRASTINATION.
+</strong></p>
+
+</body>
+</html>
+
+
 
