--- a/silver-happiness.html
+++ b/silver-happiness.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
 </head>
+<link rel="stylesheet" type="text/css" href="main.css">
 <body>
 
 <h1 style = "color:darkslateblue;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 text-align: center;">
 Hello, World!
 </h1>
 
-<p style = "color:lightcoral;
+
+<p class="hello">
+    Hello world!
+</p>
+
+<!-- <p style = "color:lightcoral;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 text-align: center;">
     Feel free to push on random buttons to see where it leads you ;)
-</p>
+</p> -->
 
 <p style = "color:red;
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
