--- a/silver-happiness.html
+++ b/silver-happiness.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html>
 </head>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel = "stylesheet" type = "text/css" href = "main.css">
 <body>
 
-<h1 style = "color:darkslateblue;
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-text-align: center;">
-Hello, World!
-</h1>
 
 
-<p class="hello">
-    Hello world!hi
+<p class = "world">
+    Hello, World!
 </p>
 
-<!-- <p style = "color:lightcoral;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-text-align: center;">
-    Feel free to push on random buttons to see where it leads you ;)
-</p> -->
 
-<p style = "color:red;
-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-text-align: center;"><strong>
+<p class = "push">
+    Feel free to push on random buttons to see where it leads you ;)
+</p>
+
+
+<p class = "warning">
     WARNING: THIS MAY OR MAY NOT LEAD TO SEVERE PROCRASTINATION.
-</strong></p>
+</p>
+
+<form class = "pikachu" action = "differentPage.html">
+    <input type = "submit" value = "Beware!">
+</form>
+
+<!-- <form action = "differentPage.html">
+    <input type = "submit" value = "Click me!"/>
+</form> -->
+
+
+
+
 
 </body>
 </html>
-
-
 
