added gifs to folder

--- a/scaryPikachu.html
+++ b/scaryPikachu.html
@@ -4,20 +4,16 @@
 <link rel = "stylesheet" type = "text/css" href = "main.css">
 <body>
 
-<img src = "dancingpikachu.gif" class = "dancing"/>
+<img src = "scarypikachu.gif" class = "scarypikachu"/>
 
-<p class = "boba">
-        when you get boba...
+<p class = "nosleep">
+    college students be like
 </p>
 
-
-<form class = "pikachu" action = "silver-happiness.html">
+<form class = "scary" action = "silver-happiness.html">
         <input type = "submit" value = "Take me back!"/>
-        
+
+   
 </form>
 </body>
 </html>
-
-
-
-
