--- a/silver-happiness.html
+++ b/silver-happiness.html
@@ -7,7 +7,7 @@
 
 
 <p class = "world">
-    Hello, World!
+    H3LL0 W0RLD!
 </p>
 
 
@@ -17,12 +17,44 @@
 
 
 <p class = "warning">
-    WARNING: THIS MAY OR MAY NOT LEAD TO SEVERE PROCRASTINATION.
+    !!!WARNING: THIS MAY OR MAY NOT LEAD TO SEVERE PROCRASTINATION!!!
 </p>
 
+<img src = "puppyrun.gif" class = "puppyrun">
+
+<p class = "doggies">
+    cuz we all need a little bit more dogs in the world...
+</p>
+<div class = padStuff>
 <form class = "pikachu" action = "differentPage.html">
-    <input type = "submit" value = "Beware!">
+    <input type = "submit" value = "something cute...">
 </form>
+</div>
+
+<div class = padStuff>
+<form class = "scarypik" action = "scaryPikachu.html">
+    <input type = "submit" value = "something not so cute...">
+</form>
+</div>
+
+<div class = padStuff>
+    
+<form class = "screampik" action = "screamingPikachu.html">
+    <input type = "submit" value = "excited for that movie yet?">
+</form>
+</div>
+
+<div class = padStuff>
+<form class = "poledance" action = "dancingDeadPool.html">
+    <input type = "submit" value = "want a show?">
+</form>
+</div>
+
+<div class = padStuff>
+<form class = "disney" action = "yikesDisney.html">
+    <input type = "submit" value = "like disney?">
+</form>
+</div>
 
 <!-- <form action = "differentPage.html">
     <input type = "submit" value = "Click me!"/>
